--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -5,6 +5,19 @@
         <div class="content">
           <h2>{{ item.title }}</h2>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
+
+                {% if item.graduated %} 
+                <p class="date"><strong>Graduated: </strong>{{ item.graduated }}</p>
+                {% endif %}
+
+                {% if item.degree %} 
+                <p class="date"><strong>Degree: </strong>{{ item.degree }}</p>
+                {% endif %}
+
+                {% if item.rank %}
+                <p class="date"><strong>Rank: </strong>{{ item.rank }}</p>
+                {% endif %}
+
           <p>{{ item.description }}</p>
         </div>
       </div>
