--- a/_includes/social.html
+++ b/_includes/social.html
@@ -7,8 +7,8 @@
     {%- assign service_name = account[0] -%}
     {%- assign service_data = site.data.social-media[service_name] -%}
     {%- if service_data -%}    
-    <a class="social mx-1"  href="{{ service_data.url }}{{ account[1] }}"
-       style="color: #{{ unfocused_color }}"
+    <a class="social mx-1 "  href="{{ service_data.url }}{{ account[1] }}"
+       style="color: #{{ unfocused_color }}; font-size: 30px;"
        onMouseOver="this.style.color='#{{ service_data.color }}'"
        onMouseOut="this.style.color='#{{ unfocused_color }}'">
       <i class="{{ service_data.icon }} fa-1x"></i>
