--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -29,3 +29,28 @@
   margin-top: 4em;
   margin-right: 2em;
 }
+
+// ul li a::before {
+//   content: '';
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   border-radius: 50%;
+//   background: $unfocused_color;
+//   transition: .5s;
+//   transform: scale(.9);
+//   z-index: -1;
+// }
+//
+// ul li a:hover::before {
+//   transform: scale(1.1);
+//   box-shadow: 0 0 15px #ffee10;
+// }
+//
+// ul li a:hover {
+//   color: #ffee10;
+//   box-shadow: 0 0 5px #ffee10;
+//   text-shadow: 0 0 5px #ffee10;
+// }
