--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,13 +1,16 @@
-$primary:   #007bff;
-$secondary: #6c757d;
-$success:   #28a745;
-$info:      #17a2b8;
-$warning:   #ffc107;
-$danger:    #dc3545;
-$light:     #f8f9fa;
-$dark:      #343a40;
+$primary:   #2c3e50;
+$secondary: #95a5a6;
+$success:   #27ae60;
+$info:      #2980b9;
+$warning:   #f39c12;
+$danger:    #c0392b;
+$light:     #ecf0f1;
+$dark:      #1a252f;
 
-$text-black: #343a40;
+$text-black: #2c3e50;
 $text-white: rgba(white, .9);
+
+$font-family-sans-serif: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-headings: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 $rounded-borders: 15px;
