--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -1,14 +1,7 @@
 <div class="row justify-content-center align-items-center p-4">
   <div class="col-lg-8 col-md-10 text-center mt-4">
-    <img src="{{ site.author.image }}" alt="{{ site.title }}" class="circle-image-lg wow animated zoomIn" data-wow-delay=".1s">
+    <img src="{{ site.author.image }}" alt="{{ site.title }}" class="circle-image wow animated zoomIn" data-wow-delay=".1s">
     <h1 class="display-4 wow animated slideInUp" data-wow-delay=".15s">{{ site.author.name }}</h1>
     <p class="lead wow animated slideInUp" data-wow-delay=".2s">{{ site.description }}</p>
-  </div>
-</div>
-
-<div class="row justify-content-center align-items-center p-4">
-  <div class="col-lg-10 col-md-12">
-    <h2 class="text-center mb-4">Recent Projects</h2>
-    {% include projects/index.html %}
   </div>
 </div>
